# krepis

./: .gitignore  Cargo.toml  README.md  deno.json  newPlan.md  plan.md
.devcontainer/: devcontainer.json
.idx/: dev.nix
crates/krepis-core/: Cargo.toml
crates/krepis-core/src/: abi.rs  context.rs  error.rs  lib.rs  traits.rs
crates/krepis-core/src/domain/: mod.rs
crates/krepis-core/src/domain/context/: mod.rs  types.rs
crates/krepis-core/src/domain/error/: codes.rs  mod.rs
crates/krepis-core/src/domain/kernel/: mod.rs
crates/krepis-core/src/domain/resource/: mod.rs
crates/krepis-core/src/domain/runtime/: mod.rs
crates/krepis-core/src/domain/transport/: mod.rs
crates/krepis-core/src/infrastructure/: mod.rs
crates/krepis-core/src/infrastructure/abi/: config.rs  mod.rs  primitives.rs  shared.rs
crates/krepis-kernel/: Cargo.toml  build.rs  sovereign_test.rs
crates/krepis-kernel/proto/: context.proto  error.proto
crates/krepis-kernel/src/: journal.rs  lib.rs  main.rs  ops.rs
crates/krepis-kernel/src/adapters/: mod.rs  pool.rs
crates/krepis-kernel/src/adapters/executor/: commands.rs  mod.rs
crates/krepis-kernel/src/adapters/runtime_ops/: bridge.rs  state.rs
crates/krepis-kernel/src/adapters/storage/: mod.rs  sled_journal.rs
crates/krepis-kernel/src/domain/: journal.rs  mod.rs  pool.rs  tenant.rs
crates/krepis-kernel/src/domain/journal/: mod.rs  model.rs  status.rs
crates/krepis-kernel/src/domain/pool/: mod.rs  policy.rs  state.rs
crates/krepis-kernel/src/domain/tenant/: error.rs  mod.rs  model.rs  policy.rs  tier.rs
crates/krepis-kernel/src/ffi/: bridge.rs  mod.rs
crates/krepis-kernel/src/infrastructure/: mod.rs
crates/krepis-kernel/src/infrastructure/serialization/: converters.rs  mod.rs  proto.rs
crates/krepis-kernel/src/infrastructure/v8_ffi/: bridge.rs
crates/krepis-kernel/src/kernel/: commands.rs
crates/krepis-kernel/src/ops/: bridge.rs  mod.rs
crates/krepis-kernel/src/proto/: mod.rs
crates/krepis-kernel/tests/: pool_isolation_test.rs  sovereign_test.rs
crates/krepis-knul/: Cargo.toml  README.md
crates/krepis-knul/src/: lib.rs  registry.rs  server.rs
crates/krepis-knul/src/adapter/: mod.rs
crates/krepis-knul/src/adapter/ffi/: mod.rs
crates/krepis-knul/src/adapter/quinn/: handler.rs  mod.rs  server.rs
crates/krepis-knul/src/domain/: mod.rs  types.rs
crates/krepis-knul/src/infrastructure/: mod.rs
crates/krepis-knul/src/infrastructure/ffi/: mod.rs
crates/krepis-knul/src/infrastructure/queue/: mod.rs
crates/krepis-knul/src/infrastructure/registry/: mod.rs  types.rs
crates/krepis-knul/src/infrastructure/runtime/: mod.rs
crates/krepis-twin/: Cargo.toml  README.md
crates/krepis-twin/benches/: dpor_bench.rs
crates/krepis-twin/docs/: DEVELOPMENT_WORKFLOW.md  TLA_VERIFICATION_STRATEGY.md
crates/krepis-twin/specs/cfg/: ClassicDPOR.cfg  ClassicDPOR_Small.cfg  KiDPOR.cfg  KiDPOR_Liveness.cfg  KiDPOR_Liveness_Small.cfg  KiDPOR_Small.cfg  KrepisTracing.cfg  ResourceOracle_Deadlock.cfg  SchedulerOracle.cfg  VirtualClock.cfg
crates/krepis-twin/specs/tla/: ClassicDPOR.tla  KiDPOR.tla  KiDPOR_Liveness.tla  KrepisTracing.tla  ResourceOracle.cfg  ResourceOracle.tla  ResourceOracle_Exhaustive.cfg  SchedulerOracle.tla  SimulatedMemory.cfg  SimulatedMemory.tla  VirtualClock.tla
crates/krepis-twin/src/: lib.rs
crates/krepis-twin/src/adapters/: mod.rs
crates/krepis-twin/src/domain/: mod.rs  simulation.rs
crates/krepis-twin/src/domain/clock/: backend.rs  engine.rs  mod.rs  production_backend.rs  proofs.rs  types.rs  verification_backend.rs
crates/krepis-twin/src/domain/dpor/: ki_proof.rs  ki_scheduler.rs  ki_state.rs  mod.rs  proof.rs  scheduler.rs  vector_clock.rs
crates/krepis-twin/src/domain/memory/: backend.rs  mod.rs  ops.rs  production_backend.rs  proofs.rs  types.rs  verification_backend.rs
crates/krepis-twin/src/domain/resources/: detailed.rs  mod.rs  noop.rs  proof.rs  tracker.rs  types.rs
crates/krepis-twin/src/domain/scheduler/: backend.rs  mod.rs  oracle.rs  production_backend.rs  proof.rs  types.rs  verification_backend.rs
crates/krepis-twin/src/domain/tracing/: causality.rs  event.rs  mod.rs  proofs.rs  tracer.rs
crates/krepis-twin/src/infrastructure/: mod.rs
crates/krepis-twin/tests/: dpor_abba_test.rs  integration_test.rs  liveness_test.rs
docs/: DOCUMENT_INDEX.md  JOURNAL.md  README.md  SOVEREIGN.md
docs/benchmarks/: CORE_PERFORMANCE.md
docs/framework/: 00_SYSTEM_ARCHITECTURE.md  01_DUAL_ENGINE_STRATEGY.md  02_UNIFIED_BUILD_PIPELINE.md  03_CODE_QUALITY_STANDARDS.md
docs/framework/kernel/: 00_SOVEREIGN_RUNTIME.md  01_TENANT_RESOURCE_MAPPING.md  02_RESOURCE_QUOTA_GUARDRAILS.md  03_KNUL_PROTOCOL_AND_FFI.md  04_FFI_MEMORY_SAFETY.md
docs/framework/knul/: 00_QUIC_FFI_SPEC.md  01_New_Plan_of_KNUL
docs/framework/sdk/: 01_CONTEXT_PROPAGATION.md  02_DEPENDENCY_INJECTION.md  03_PIPELINE_MIDDLEWARE.md  05_DOMAIN_REPOSITORY.md  06_SPECIFICATION_PATTERN.md  08_DOMAIN_EVENTS.md  09_IDENTITY_AND_ACCESS.md  10_UNIFIED_CONFIGURATION.md  12_RESILIENCE_POLICIES.md
docs/framework/twin/: 00_TWIN_OVERVIEW.md  03_KANI_PROOF_MANUAL.md
docs/framework/twin/correctness/: 00_DIGITAL_TWIN_PHYSICS.md  (+2 more)
docs/legal/: 00_TERMS_OF_SERVICE.md  01_NDA_AGREEMENT.md  02_DATA_PRIVACY_OPTOUT.md
docs/platform/: 00_FRACTAL_LEGION_ARCH.md  01_LEGION_OPERATION_POLICY.md  02_LEGION_INTERVENTION_PROTOCOL.md
docs/roadmap/: 00_MASTER_ROADMAP.md  01_HYPER_SWARM.md  02_TRI_STORE.md
docs/specs/: krepis_spec_001.md  krepis_spec_002.md  krepis_spec_003.md  krepis_spec_005.md  krepis_spec_006.md  krepis_spec_014.md
docs/specs/base/: krepis_base-Spec_007.md  krepis_base_spec_001.md  krepis_base_spec_003.md  krepis_base_spec_003_A.md  krepis_base_spec_004.md  krepis_base_spec_005.md  krepis_base_spec_005_A.md
docs/specs/developments/: README.md  krepis_dev_spec_000.md  krepis_dev_spec_001.md  krepis_dev_spec_002_sovereign_bridge.md  krepis_dev_spec_003.md
docs/vision/: 02_ADAAS_ECONOMY.md
scripts/: build-ffi.sh  build-sovereign.sh  demo-recovery.sh  demo-sovereign.sh  krepis-twin-build.sh
(+6 files in other folders)
