[package]
name = "krepis-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "krepis_kernel"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "krepis-kernel"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hyper = { workspace = true }
hyper-util = {workspace = true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prost = { workspace = true }
bytes = "1.7"
uuid = { version = "1.11", features = ["v4"] }

# Deno Runtime Embedding
deno_core = { version = "0.316.0" }
# deno_runtime = "0.188.0"

sled = { workspace = true }

# Multi-tenant Pooling
lru = "0.12"
parking_lot = "0.12"

# C-002: Concurrent Hashmap for Bulkhead Pattern
dashmap = "6.1"

krepis-knul = { path = "../krepis-knul" }
once_cell = "1.21.3"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tempfile = "3.13"
